# memscope

./: .gitignore  README.md  pyproject.toml
configs/: llama_runtime_toy.json  llama_toy.json  runtime_toy.yaml
memscope/: cli.py  constants.py  utils.py
memscope/integrations/megatron/: args_loader.py  hooks.py  runtime.py
memscope/models/: toy_transformer.py
memscope/parsers/: config_loader.py
memscope/report/: console_reporter.py  json_reporter.py  markdown_reporter.py  runtime_markdown_reporter.py
memscope/runtime/: hooks.py  memory.py  profiler.py  snapshot.py  tracer.py
memscope/schemas/: config.py  op.py  report.py
memscope/static/: analyzer.py  estimator.py  formulas.py  shape_infer.py
memscope/visualization/: __init__.py  runtime_html.py
scripts/: analyze_runtime.py  analyze_static.py
